# CTS_Scoreboard

./: .gitignore  2026-05-31 17:51:27,083 DEBUG transition  CODE_OF_CONDUCT.md  CTS_Scoreboard.py  LICENSE  README.md  StreamServer.py  ad_image.py  azure_relay.py  console-dump-2.txt  credentials_store.py  cts-scoreboard.code-workspace  hytek_event_loader.py  hytek_rec_parser.py  hytek_st2_parser.py  package-lock.json  package.json  pyproject.toml  qr_utils.py  race_state_machine.py  scroll-debug.txt  set_credentials.py  settings.json  settings_routes.py  sim.py  start.sh  template_bundle.py  wifi_manager.py
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/scripts/: cleanup-revisions.sh
.github/workflows/: azure-ci.yml  azure-cleanup-revisions.yml  azure-deploy-preprod.yml  azure-infra-deploy.yml  azure-promote-prod.yml  stress-deploy.yml  stress-run.yml  stress-stop.yml
azure/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
azure/app/: __init__.py  auth.py  config.py  handlers.py  main.py  marketing.py  routes.py  scale_telemetry.py  state.py  storage.py  telemetry.py  transport.py  watchdog.py
azure/app/static/css/: site.css
azure/app/static/js/: engagement.js
azure/app/templates/: base.html  home.html  privacy.html  terms.html
azure/docs/: AZURE_SETUP.md  CUSTOM_DOMAIN_SETUP.md  DASHBOARD.md  ENGAGEMENT-DASHBOARD.md  SUBSCRIPTION_MIGRATION.md
azure/infra/: main.bicep
azure/notebooks/: README.md  cross_meet.ipynb  per_meet.ipynb
azure/notebooks/_lib/: engagement_query.py
azure/tests/: conftest.py
azure/tests/e2e/: test_deployed.py
azure/tests/integration/: test_full_path.py  test_smoke.py
azure/tests/unit/: test_auth.py  test_engagement.py  test_engagement_query.py  test_handlers.py  test_health.py  test_marketing.py  test_routes.py  test_state_keys.py  test_state_store.py  test_telemetry.py  test_watchdog.py
docs/: HYTEK_REC_FORMAT.md  HYTEK_ST2_FORMAT.md  PI_KIOSK_SETUP.md  plan-azure.md
pi/desktop/: cts-kiosk.desktop  cts-settings.desktop
pi/labwc/: autostart  rc.xml.snippet
pi/scripts/: cts-kiosk.sh  cts-settings.sh  install-kiosk.sh  uninstall-kiosk.sh  wait-for-server.sh
pi/systemd/: cts-scoreboard.service
samples/: DemoMeet-MixedEvent.hy3  Meet Entries-Demo Meet-28Mar2026-001.hy3  hytek_event_simple.csv
samples/HyTek/: BChampRecord-test-y.rec  BChampRecord-y.rec  BChamps-FunAgesAndMixedSex-y.rec  Midlakes-records-test-y.rec  MixedTimeStandards-MaybeTwoCourses.st2  MixedTimeStandards-SCYPlus.st2  MixedTimeStandards-ThreeCourses.st2  MixedTimeStandards.st2  TimeStd.st2
static/css/: scoreboard_style_web.css  (+1 more)
stress-test/: README.md
templates/: login.html  schedule_preview.html  settings.html  site_map.html  test.html
tests/: conftest.py  console-dump-3.txt  test_ad_image.py  test_ad_rotation.py  test_api.py  test_azure_context.py  test_azure_relay.py  test_azure_relay_connect.py  test_azure_routes.py  test_azure_settings_ui.py  test_credentials.py  test_cts_helpers.py  test_dev_mode.py  test_event_dims.py  test_flask_routes.py  test_footer_messages.py  test_hytek_event_loader.py  test_hytek_rec_parser.py  test_hytek_st2_parser.py  test_lane_display_mode.py  test_qr_utils.py  test_race_state_machine.py  test_rendering.py  test_template_bundle.py  test_ui_style.py  test_wifi_manager.py
(+21 files in other folders)
