[project]
name = "cts-scoreboard"
version = "0.1.0"
description = "HTML display of CTS (Colorado Time Systems) scoreboard data"
requires-python = ">=3.13"
dependencies = [
    "flask",
    "flask-login",
    "flask-socketio",
    "pyserial",
    "hytek-parser",
    "transitions",
]

[project.scripts]
cts-scoreboard = "CTS_Scoreboard:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = [
    "CTS_Scoreboard.py",
    "ap.py",
    "hytek_event_loader.py",
    "hytek_rec_parser.py",
    "hytek_st2_parser.py",
    "race_state_machine.py",
]
