[project]
name = "cts-scoreboard"
version = "0.1.0"
description = "HTML display of CTS (Colorado Time Systems) scoreboard data"
requires-python = ">=3.13"
dependencies = [
    "flask",
    "flask-login",
    "flask-socketio",
    "pyserial",
    "hytek-parser",
    "transitions",
    "gunicorn",
    "gevent",
    "gevent-websocket",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[project.scripts]
cts-scoreboard = "CTS_Scoreboard:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
test = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = [
    "CTS_Scoreboard.py",
    "ap.py",
    "hytek_event_loader.py",
    "hytek_rec_parser.py",
    "hytek_st2_parser.py",
    "race_state_machine.py",
    "sim.py",
]
