[project]
name = "cts-scoreboard-azure"
version = "0.1.0"
description = "Azure relay front-end for CTS Scoreboard. Bridges Pi-hosted scoreboards to remote viewers via Container Apps + Socket.IO with Redis fanout."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "gunicorn>=23",
    "python-socketio>=5.11",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "jinja2>=3.1",
    "redis>=5.2",
    "orjson>=3.10",
    "azure-data-tables>=12.5",
    "azure-storage-blob>=12.23",
    "azure-identity>=1.19",
    "msal>=1.31",
    "pyjwt[crypto]>=2.9",
    "httpx>=0.27",
    "azure-monitor-opentelemetry>=1.6",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "structlog>=24.4",
    # Transitive dep of azure-monitor-opentelemetry that doesn't always survive
    # `pip install --prefix` layouts in the Docker build; pin it explicitly.
    "packaging>=24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "fakeredis>=2.26",
    "ruff>=0.7",
    "mypy>=1.13",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
